--- a/todo-app-front/package.json
+++ b/todo-app-front/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
     "jsdom": "^24.1.1",
+    "redux-mock-store": "^1.5.4",
     "vite": "^5.3.4",
     "vitest": "^2.0.5"
   }
