--- a/todoapp/src/main/resources/application.properties
+++ b/todoapp/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 spring.application.name=todoapp
 server.port=9090
+cors.allowed.origins=http://localhost:8080,http://localhost:5501,http://127.0.0.1:5501
